deploy step added test

--- a/.github/workflows/azure-bicep-cicd.yml
+++ b/.github/workflows/azure-bicep-cicd.yml
@@ -30,4 +30,12 @@ jobs:
         with:
           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
           creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
+
+      - name: az bicep deploy
+        uses: Azure/login@v1.4.6
+        with:
+          # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
+          creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
+
+
          
