--- a/.github/workflows/azure-bicep-cicd.yml
+++ b/.github/workflows/azure-bicep-cicd.yml
@@ -17,6 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    name: 'bicep build'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -32,10 +33,30 @@ jobs:
           creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
 
       - name: az bicep deploy
+        working-directory: '{github.workspace}'
+        run: |
+            az deployment sub create --what-if --template-file ./main.bicep --parameters './parameters.dev.json' --location westeurope --output jsonc
+   
+  deploy:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: [build]
+    environment: dev
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      - name: Azure Login
         uses: Azure/login@v1.4.6
         with:
           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
           creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
 
+      - name: az bicep deploy
+        working-directory: '{github.workspace}'
+        run: |
+            az deployment sub create --template-file ./main.bicep --parameters './parameters.dev.json' --location westeurope --output jsonc 
 
          
