--- a/.github/workflows/azure-bicep-cicd.yml
+++ b/.github/workflows/azure-bicep-cicd.yml
@@ -16,8 +16,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
-    name: 'bicep build'
+  bicep_build:
+    name: bicep build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -37,7 +37,8 @@ jobs:
         run: |
             az deployment sub create --what-if --template-file ./main.bicep --parameters './parameters.dev.json' --location westeurope --output jsonc
    
-  deploy:
+  bicep_deployment:
+    name: bicep deployment
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     needs: [build]
@@ -54,7 +55,7 @@ jobs:
           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
           creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
 
-      - name: az bicep deploy
+      - name: az bicep resources deploy
         working-directory: '{github.workspace}'
         run: |
             az deployment sub create --template-file ./main.bicep --parameters './parameters.dev.json' --location westeurope --output jsonc 
