--- a/.github/workflows/azure-bicep-cicd.yml
+++ b/.github/workflows/azure-bicep-cicd.yml
@@ -41,7 +41,7 @@ jobs:
     name: bicep deployment
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [bicep_build]
     environment: dev
 
     # Steps represent a sequence of tasks that will be executed as part of the job
