--- a/.github/workflows/deployBicepFile.yml
+++ b/.github/workflows/deployBicepFile.yml
@@ -1,5 +1,10 @@
-on: [push]
-name: Azure ARM
+name: Azure bicep deployment test
+on: 
+  push:
+    branches: [ "main" ]
+
+  workflow_dispatch:
+
 permissions:
   id-token: write
   contents: read
