--- a/.github/workflows/deployBicepFileTest.yml
+++ b/.github/workflows/deployBicepFileTest.yml
@@ -1,13 +1,5 @@
-name: Azure bicep deployment test
-on: 
-  push:
-    branches: [ "main" ]
-
-  workflow_dispatch:
-
-permissions:
-  id-token: write
-  contents: read
+on: [push]
+name: Azure ARM
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -19,14 +11,14 @@ jobs:
       # Log into Azure
     - uses: azure/login@v1
       with:
-            creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
+        creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
 
       # Deploy Bicep file
     - name: deploy
       uses: azure/arm-deploy@v1
       with:
-        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./main.bicep
-        parameters: 'webAppNameParam=TestName'
+        parameters: 'storagePrefix=mystore storageSKU=Standard_LRS'
         failOnStdErr: false
