--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -20,5 +20,6 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./main.bicep
-        parameters: 'storagePrefix=mystore storageSKU=Standard_LRS'
+        parameters: ''
         failOnStdErr: false
+        location: westeurope
