--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -17,9 +17,8 @@ jobs:
     - name: deploy
       uses: azure/arm-deploy@v1
       with:
-        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./main.bicep
-        parameters: ''
-        failOnStdErr: false
+        parameters: main.bicep storageAccountType=Standard_LRS 
+        additionalArguments: "--what-if --rollback-on-error --what-if-exclude-change-types Create Ignore"
  
