--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -3,6 +3,8 @@ name: Azure Bicep deploy testing new
 
 env: 
     AZURE_RESOURCEGROUP_NAME: demo-app-service-rg
+    ENVIRONMENT: dev
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,11 +16,14 @@ jobs:
       # Log into Azure
     - uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - uses: azure/arm-deploy@v1
       with:
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./main.bicep
-        parameters: main.bicep storageAccountType=Standard_LRS 
+        parameters: environmentType=${{ env.ENVIRONMENT }}
+        
  
