--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -4,10 +4,6 @@ name: Azure Bicep deploy testing new
 permissions:
   id-token: write
   contents: read
-  
-env: 
-    AZURE_RESOURCEGROUP_NAME: demo-app-service-rg
-    ENVIRONMENT: dev
     
 jobs:
   deploy:
@@ -19,14 +15,14 @@ jobs:
 
       # Log into Azure
     - uses: azure/login@v1
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      with: # Set Azure credentials secret as an input
+       credentials: ${{ secrets.AZURE_CREDENTIALS }}
+      env: # Or as an environment variable
+       credentials: ${{ secrets.AZURE_CREDENTIALS }}
 
     - uses: azure/arm-deploy@v1
-      with:
-        resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
+      with: # Set Azure credentials secret as an input
+        credentials: ${{ secrets.AZURE_CREDENTIALS }}
         template: ./main.bicep
         parameters: environmentType=${{ env.ENVIRONMENT }}
         
