--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -16,13 +16,13 @@ jobs:
       # Log into Azure
     - uses: azure/login@v1
       with: # Set Azure credentials secret as an input
-       credentials: ${{ secrets.AZURE_CREDENTIALS }}
+       creds: ${{ secrets.AZURE_CREDENTIALS }}
       env: # Or as an environment variable
-       credentials: ${{ secrets.AZURE_CREDENTIALS }}
+       creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - uses: azure/arm-deploy@v1
       with: 
-        credentials: ${{ secrets.AZURE_CREDENTIALS }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
         template: ./main.bicep
         parameters: environmentType=${{ env.ENVIRONMENT }}
         
