--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -5,10 +5,6 @@ permissions:
   id-token: write
   contents: read
   
-env:
-    AZURE_RESOURCEGROUP_NAME: demo-app-service-rg
-    ENVIRONMENT: dev
-    
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -24,10 +20,13 @@ jobs:
       env: # Or as an environment variable
        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      # Deploy ARM template
+    - name: Deploy to Azure
     - uses: azure/arm-deploy@v1
       with: 
-        resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
+        subscriptionId: ${{ secrets.AZURE_CREDENTIALS }}
+        resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./main.bicep
-        parameters: environmentType=${{ env.ENVIRONMENT }}
+        parameters: storageAccountType=Standard_LRS
         
  
