--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -7,6 +7,7 @@ permissions:
   
 env:
     ENVIRONMENT: dev
+    INPUT_REGION: westeurope
     
 jobs:
   deploy:
@@ -29,3 +30,4 @@ jobs:
         template: ./main.bicep
         parameters: environmentType=${{ env.ENVIRONMENT }}
         scope: 'subscription'
+        region: ${{ env.INPUT_REGION }}
