--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -26,7 +26,7 @@ jobs:
 
     - uses: azure/arm-deploy@v1
       with: 
-        resourceGroupName: ${{ secrets.AZURE_RG }}
+        resourceGroupName: ${{ secrets.AZURE_RG_NAME }}
         template: ./main.bicep
         parameters: ./parameters.dev.json
         scope: 'resourcegroup'
