--- a/.github/workflows/deployBicepFileTesting.yml
+++ b/.github/workflows/deployBicepFileTesting.yml
@@ -8,7 +8,6 @@ permissions:
 env:
     ENVIRONMENT: dev
     INPUT_REGION: westeurope
-    AZURE_RG: deployment-test-resourcegroup
     
 jobs:
   deploy:
@@ -27,7 +26,7 @@ jobs:
 
     - uses: azure/arm-deploy@v1
       with: 
-        resourceGroupName: ${{ env.AZURE_RG }}
+        resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./main.bicep
         parameters: ./parameters.dev.json
         scope: 'resourcegroup'
