--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -6,7 +6,7 @@ permissions:
   contents: read
 
 env:
-  MODULE_NAME: appServicePlan
+  MODULE_NAME: appserviceplan
   MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
   MODULE_FILE_PATH: main.bicep
   MODULE_METADATA_FILE_PATH: metadata.json
@@ -40,13 +40,13 @@ jobs:
         do
             cd $d
             version="v$(cat metadata.json | jq -r '.version.major').$(cat metadata.json | jq -r '.version.minor')"
-             if [ -z "$(az acr repository show -n ${{ env.MODULE_REGISTRY_SERVER }} --image modules/${d::-1}:$version 2>/dev/null)" ]; 
+             if [ -z "$(az acr repository show -n ${{ env.MODULE_REGISTRY_SERVER }} --image ${{ env.MODULE_NAME }}/${d::-1}:$version 2>/dev/null)" ]; 
              then 
-              echo "Publishing br:${{ env.MODULE_REGISTRY_SERVER }}/modules/${d::-1}:$version";
-              az bicep publish --file main.bicep --target "br:${{ env.MODULE_REGISTRY_SERVER }}/modules/${d::-1}:$version";
+              echo "Publishing br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}//${d::-1}:$version";
+              az bicep publish --file main.bicep --target "br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}/${d::-1}:$version";
              else 
-              echo "Skipping br:${{ env.MODULE_REGISTRY_SERVER }}/modules/${d::-1}:$version as it already exists";
+              echo "Skipping br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}/${d::-1}:$version as it already exists";
              fi
              cd - > /dev/null
            done   
-        working-directory: modules
+
