--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -6,7 +6,7 @@ permissions:
   contents: read
 
 env:
-  MODULE_NAME: appserviceplan
+  MODULE_NAME: webapp
   MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
   MODULE_FILE_PATH: main.bicep
   MODULE_METADATA_FILE_PATH: metadata.json
@@ -33,20 +33,15 @@ jobs:
       name: Sign in to Azure
       with:
        creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
-
-    - name: TEST
+    - name: Get module version number
       run: |
-        for d in */
-        do
-            cd $d
-            version="v$(cat metadata.json | jq -r '.version.major').$(cat metadata.json | jq -r '.version.minor')"
-             if [ -z "$(az acr repository show -n ${{ env.MODULE_REGISTRY_SERVER }} --image ${{ env.MODULE_NAME }}/${d::-1}:$version 2>/dev/null)" ]; 
-             then 
-              echo "Publishing br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}//${d::-1}:$version";
-              az bicep publish --file main.bicep --target "br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}/${d::-1}:$version";
-             else 
-              echo "Skipping br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}/${d::-1}:$version as it already exists";
-             fi
-             cd - > /dev/null
-           done   
-
+        majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.MODULE_METADATA_FILE_PATH }} -r )
+        versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
+        echo "MODULE_VERSION=$versionNumber" >> $GITHUB_ENV
+    - uses: azure/cli@v1
+      name: Publish module
+      with:
+        inlineScript: |
+          az bicep publish \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
+            --file ${{ env.MODULE_FILE_PATH }}
