--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -6,7 +6,7 @@ permissions:
   contents: read
 
 env:
-  MODULE_NAME: webapp
+  MODULE_NAME: appserviceplan
   MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
   MODULE_FILE_PATH: main.bicep
   MODULE_METADATA_FILE_PATH: metadata.json
