--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -16,6 +16,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+    
     - uses: actions/checkout@v2
     - uses: azure/login@v1
       name: Sign in to Azure
@@ -23,11 +24,16 @@ jobs:
        creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
     - name: Run Bicep linter
       run: az bicep build --file ${{ env.MODULE_FILE_PATH }}
+    - name: Print Message        
+      run: which bicep
+      
   
   publish:
     runs-on: ubuntu-latest
     needs: [ lint ]
     steps:
+
+    
     - uses: actions/checkout@v2
     - uses: azure/login@v1
       name: Sign in to Azure
