--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -32,8 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ lint ]
     steps:
-
-    
+ 
     - uses: actions/checkout@v2
     - uses: azure/login@v1
       name: Sign in to Azure
@@ -51,4 +50,4 @@ jobs:
         inlineScript: |
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
-            --file ${{ env.MODULE_FILE_PATH }}
+            --file "${{ GITHUB.WORKSPACE }}/${{ env.MODULE_FILE_PATH }}"
