--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -50,4 +50,4 @@ jobs:
         inlineScript: |
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
-            --file "${{ GITHUB.WORKSPACE }}/${{ env.MODULE_FILE_PATH }}"
+            --file "${{ github.workspace }}/${{ env.MODULE_FILE_PATH }}"
