--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -48,6 +48,7 @@ jobs:
       name: Publish module
       with:
         inlineScript: |
-          az bicep publish \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
-            --file "${{ github.workspace }}/${{ env.MODULE_FILE_PATH }}"
+          ls -all
+          #az bicep publish \
+            #--target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
+            #--file "${{ github.workspace }}/${{ env.MODULE_FILE_PATH }}"
