--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -1,4 +1,4 @@
-name: Test Publish Bicep To ACR Workflow test
+name: Test Publish Bicep To ACR Workflow
 
 on: [push]
 permissions:
@@ -48,5 +48,6 @@ jobs:
       name: Publish module
       with:
         inlineScript: |
-          ls -all
-          
+          az bicep publish \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
+            --file /home/runner/work/webapp-demo/webapp-demo/main.bicep
