--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -42,13 +42,14 @@ jobs:
       run: |
         majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.MODULE_METADATA_FILE_PATH }} -r )
         versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
-        #echo "module_version=$versionnumber" >> $github_env
-    #- uses: actions/checkout@v2
+        echo "module_version=$versionnumber" >> $github_env
+    - uses: actions/checkout@v2
     - uses: azure/cli@v1
       name: Publish module
       with:
         azcliversion: latest
         inlineScript: |
           az bicep publish \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
             --file /home/runner/work/webapp-demo/webapp-demo/main.bicep
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
+            
