--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -50,8 +50,8 @@ jobs:
         azcliversion: latest
         inlineScript: |
           az bicep publish \
-            --file /home/runner/work/webapp-demo/webapp-demo/main.bicep \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' 
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
+            --file ${{ env.MODULE_FILE_PATH }}
             
             
             
