--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -38,14 +38,14 @@ jobs:
       name: sign in to azure
       with:
        creds: ${{ secrets.azure_credentials_client }}
-    - run: |
+    - run: 
         majorminorversionnumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.module_metadata_file_path }} -r )
         versionnumber="$majorminorversionnumber.${{ github.run_number }}"
         echo "module_version=$versionnumber" 
     - uses: actions/checkout@v2
     - uses: azure/cli@v1
       name: publish module
-    - run: |
+    - run: 
           az bicep publish \
             --target 'br:${{ env.module_registry_server }}/${{ env.module_name }}:${{ env.module_version }}' \
             --file ${{ env.module_file_path }}
