--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -48,6 +48,7 @@ jobs:
       name: Publish module
       with:
         inlineScript: |
+          az config set bicep.use_binary_from_path=False.
           az bicep install 
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
