--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.MODULE_METADATA_FILE_PATH }} -r )
         versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
-        echo "module_version=$versionnumber" 
+        echo "module_version=$versionnumber" >> $GITHUB_ENV
     - uses: actions/checkout@v2
     - uses: azure/cli@v1
       name: Publish module
@@ -51,8 +51,8 @@ jobs:
           az config set bicep.use_binary_from_path=False.
           az bicep install 
           az bicep publish \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
             --file ${{ env.MODULE_FILE_PATH }}
             
             
-            #${{ env.MODULE_VERSION }}
+            
