--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -23,8 +23,10 @@ jobs:
       with:
        creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
     - name: Run Bicep linter
-      run: az bicep build --file ${{ env.MODULE_FILE_PATH }}
-    - name: Print Message        
+      run: |
+          az bicep restore --file ${{ env.MODULE_FILE_PATH }} --force
+          az bicep build --file ${{ env.MODULE_FILE_PATH }}
+    - name: Print Message        
       run: which bicep
       
   
@@ -42,7 +44,7 @@ jobs:
       run: |
         majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.MODULE_METADATA_FILE_PATH }} -r )
         versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
-        echo "module_version=$versionnumber" 
+        echo "MODULE_VERSION=$versionNumber" >> $GITHUB_ENV
     - uses: actions/checkout@v2
     - uses: azure/cli@v1
       name: Publish module
@@ -53,6 +55,9 @@ jobs:
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \
             --file ${{ env.MODULE_FILE_PATH }}
+          az bicep publish \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
+            --file ${{ env.MODULE_FILE_PATH }}
             
             
-            #${{ env.MODULE_VERSION }}
+            
