--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -30,7 +30,7 @@ jobs:
   
   publish:
     runs-on: ubuntu-latest
-    needs: [ lint ]
+    #needs: [ lint ]
     steps:
  
     - uses: actions/checkout@v2
