--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -1,4 +1,4 @@
-name: Test Publish Bicep To ACR Workflow
+name: Publish Bicep To ACR Workflow
 
 on: [push]
 permissions:
@@ -54,6 +54,10 @@ jobs:
           az bicep install 
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \
+            --file ${{ env.MODULE_FILE_PATH }}
+
+          az bicep publish \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
             --file ${{ env.MODULE_FILE_PATH }}
             
             
