--- a/.github/workflows/testPublishAcr.yml
+++ b/.github/workflows/testPublishAcr.yml
@@ -26,9 +26,6 @@ jobs:
       run: |
           az bicep version
           az bicep build --file ${{ env.MODULE_FILE_PATH }}
-    - name: Print Message        
-      run: which bicep
-      
   
   publish:
     runs-on: ubuntu-latest
@@ -44,8 +41,7 @@ jobs:
       run: |
         majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ env.MODULE_METADATA_FILE_PATH }} -r )
         versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
-        echo "module_version=$versionnumber" 
-    - uses: actions/checkout@v2
+        echo "MODULE_VERSION=$versionNumber" >> $GITHUB_ENV
     - uses: azure/cli@v1
       name: Publish module
       with:
@@ -53,7 +49,7 @@ jobs:
           az config set bicep.use_binary_from_path=False.
           az bicep install 
           az bicep publish \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
             --file ${{ env.MODULE_FILE_PATH }}
 
             
