--- a/.github/workflows/publishAppServicePlanAcr.yml
+++ b/.github/workflows/publishAppServicePlanAcr.yml
@@ -1,4 +1,4 @@
-name: Publish Server Bicep To ACR Workflow
+name: Publish App Service Plan Bicep To ACR Workflow
 
 on: [push]
 permissions:
@@ -50,7 +50,13 @@ jobs:
           az bicep install 
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
-            --file ${{ env.MODULE_FILE_PATH }}
+            --file ${{ env.MODULE_FILE_PATH }}' \
+          az bicep publish \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \
+            --file ${{ env.MODULE_FILE_PATH }}'
+
+        
+
 
             
-            #${{ env.MODULE_VERSION }}
+           
