--- a/.github/workflows/publishAppServicePlanAcr.yml
+++ b/.github/workflows/publishAppServicePlanAcr.yml
@@ -51,8 +51,8 @@ jobs:
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \
-            --file ${{ env.MODULE_FILE_PATH }}' 
-          
+            --file ${{ env.MODULE_FILE_PATH }}
+
         
 
 
