--- a/.github/workflows/publishAppServicePlanAcr.yml
+++ b/.github/workflows/publishAppServicePlanAcr.yml
@@ -6,9 +6,9 @@ permissions:
   contents: read
 
 env:
-  MODULE_NAME: appserviceplan
+  MODULE_NAME: sqlserver
   MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
-  MODULE_FILE_PATH: ./modules/appServicePlan.bicep
+  MODULE_FILE_PATH: ./modules/sqlDatabase.bicep 
   MODULE_METADATA_FILE_PATH: metadata.json
 
 
