--- a/.github/workflows/publishAppServicePlanAcr.yml
+++ b/.github/workflows/publishAppServicePlanAcr.yml
@@ -6,7 +6,7 @@ permissions:
   contents: read
 
 env:
-  MODULE_NAME: sqlserver
+  MODULE_NAME: sqldatabase
   MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
   MODULE_FILE_PATH: ./modules/sqlDatabase.bicep 
   MODULE_METADATA_FILE_PATH: metadata.json
@@ -50,7 +50,6 @@ jobs:
           az bicep install 
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \
             --file ${{ env.MODULE_FILE_PATH }}
 
         
