--- a/.github/workflows/publishAppServicePlanAcr.yml
+++ b/.github/workflows/publishAppServicePlanAcr.yml
@@ -50,6 +50,12 @@ jobs:
           az bicep install 
           az bicep publish \
             --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
+            --file ${{ env.MODULE_FILE_PATH }}\
+          
+          az config set bicep.use_binary_from_path=False.
+          az bicep install 
+          az bicep publish \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \ 
             --file ${{ env.MODULE_FILE_PATH }}
 
         
