--- a/.github/workflows/publishAppServicePlanAcr.yml
+++ b/.github/workflows/publishAppServicePlanAcr.yml
@@ -49,8 +49,8 @@ jobs:
           az config set bicep.use_binary_from_path=False.
           az bicep install 
           az bicep publish \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' \
-            --file ${{ env.MODULE_FILE_PATH }}
+            --file ${{ env.MODULE_FILE_PATH }} \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:${{ env.MODULE_VERSION }}' 
     - uses: azure/cli@v1
       name: Publish module with latest tag
       with:
@@ -58,8 +58,9 @@ jobs:
           az config set bicep.use_binary_from_path=False.
           az bicep install 
           az bicep publish \
-            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' \ 
-            --file ${{ env.MODULE_FILE_PATH }}
+            --file ${{ env.MODULE_FILE_PATH }} \
+            --target 'br:${{ env.MODULE_REGISTRY_SERVER }}/${{ env.MODULE_NAME }}:latest' 
+            
 
         
 
