--- a/.github/workflows/workflowAcaller.yml
+++ b/.github/workflows/workflowAcaller.yml
@@ -1,6 +1,10 @@
 name: Sample workflow publiish sqldb
 
-on: [push]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   build:
