--- a/.github/workflows/workflowAcaller.yml
+++ b/.github/workflows/workflowAcaller.yml
@@ -2,9 +2,9 @@ name: Sample workflow publiish sqldb
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
