--- a/.github/workflows/workflowBreusable.yml
+++ b/.github/workflows/workflowBreusable.yml
@@ -27,8 +27,7 @@ jobs:
       with:
        creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
     - name: Run Bicep linter
-      run: |
-          az bicep build --file ${{ env.MODULE_FILE_PATH }}
+      run: az bicep build --file ${{ env.MODULE_FILE_PATH }}
   
   publish:
     runs-on: ubuntu-latest
