--- a/.github/workflows/workflowAcaller.yml
+++ b/.github/workflows/workflowAcaller.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
 
   publish:
-    needs: build
+    needs: lint
     uses: ./.github/workflows/workflowBreusable.yml
     with:
       MODULE_NAME: sqldatabase
